Added TODOs for GUI team

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,4 +1,4 @@
-<!-- TODO: this is a basic mock-up to demo the templating tools -->
+<!-- TODO: this needs to be replaced with the actual login page -->
 #[def: title = Login Page]
 ##_header.html
 		<form action="/login" method="post">
