--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,7 +3,9 @@
 ##_header.html
 		<form action="/login" method="post">
 			#[if: message]
-			<p><strong>#message</strong></p>
+			<div class="note note-#status">
+				<p><strong>#message</strong></p>
+			</div>
 			#[/if]
 			<p>
 				User ID:<br />
