Adding jquery.datetimepicker.js file

--- a/src/main/resources/static/activity.html
+++ b/src/main/resources/static/activity.html
@@ -30,7 +30,8 @@
     <![endif]-->
 
     <script src = "/js/activity.js"></script>
-
+    <script src = "/js/jquery.datetimepicker.js"></script>
+    <script src = "/js/jquery.datetimepicker2.js"></script>
     <script src="/js/jquery.min.js"></script>
     <script type=text/javascript src = "/js/jquery-1.9.1.js"></script>
     <script type=text/javascript src = "/js/jquery-ui.js"></script>
@@ -211,7 +212,7 @@
                             </tr>
                             <tr>
                                 <td>Someone</td>
-                                <td><input id ="dateTimePicker" type = "text" onclick= "dateTimePicker()"></td>
+                                <td><input id ="dateTimePicker" type = "text" value="" ></td>
                                 <td>Navigated to Dashboard</td>
                             </tr>
                         </table>
