A few changes to the code. ID row is GONe

--- a/src/main/resources/static/cameras.html
+++ b/src/main/resources/static/cameras.html
@@ -226,8 +226,7 @@
                     <table class="table table-bordered table-hover">
                         <thead>
                         <tr>
-                            <th class="col-lg-1 text-center">ID</th>
-                            <th class="col-lg-2 text-center">Name of camera</th>
+                            <th class="col-lg-3 text-center">Name of camera</th>
                             <th class="col-lg-4 text-center">Description</th>
                             <th class="col-lg-4 text-center">Facilities</th>
                             <th class="col-lg-1 text-center">Action</th>
@@ -235,14 +234,13 @@
                         </thead>
                         <tbody id="tableBodyCameras">
                         <tr id="TRBathroom">
-                            <th id="1" class="text-center">#1</th>
-                            <th id="THBathroomName" class="text-center">Bathroom</th>
-                            <th id="THBathroomDescription" class="text-center">A must have in your house.</th>
-                            <th id="THBathroomFacilities" class="text-center">Will see about this. Maybe check boxes for
+                            <th id="THBathroomName" class="text-center" style="vertical-align: middle">Bathroom</th>
+                            <th id="THBathroomDescription" class="text-center" style="vertical-align: middle">A must have in your house.</th>
+                            <th id="THBathroomFacilities" class="text-center" style="vertical-align: middle">Will see about this. Maybe check boxes for
                                 user to select
                                 therapies in this room
                             </th>
-                            <th id="THBathroomEdit" class="text-center"><u id="uBathroomEdit" class="fa fa-pencil-square-o" style="cursor:pointer;"
+                            <th id="THBathroomEdit" class="text-center" style="vertical-align: middle"><u id="uBathroomEdit" class="fa fa-pencil-square-o" style="cursor:pointer;"
                                                                    onmouseover="this.style.color='#2f2f8b';"
                                                                    onmouseout="this.style.color='';" onclick="editCamera(id)">
                                 Edit</u></th>
