--- a/src/main/resources/static/activity.html
+++ b/src/main/resources/static/activity.html
@@ -5,8 +5,9 @@
     <title>NHS Nuclear Medicine Booking System</title>
 
     <link rel="stylesheet" href="/css/jquery-ui.css" />
+    <link rel="stylesheet" href="/css/jquery.datetimepicker.css"/>
     <script src="/js/jquery.min.js"></script>
-    <script type=text/javascript src = "/js/jquery-1.9.1.js"></script>
+
     <script type=text/javascript src = "/js/jquery-ui.js"></script>
 
 
@@ -32,9 +33,8 @@
     <script src = "/js/activity.js"></script>
     <script src = "/js/jquery.datetimepicker.js"></script>
     <script src = "/js/jquery.datetimepicker2.js"></script>
-    <script src="/js/jquery.min.js"></script>
     <script type=text/javascript src = "/js/jquery-1.9.1.js"></script>
-    <script type=text/javascript src = "/js/jquery-ui.js"></script>
+
 </head>
 <body>
 <div id="wrapper">
@@ -212,7 +212,7 @@
                             </tr>
                             <tr>
                                 <td>Someone</td>
-                                <td><input id ="dateTimePicker" type = "text" value="" ></td>
+                                <td><input id ="dateTimePicker" type = "text" value=""></td>
                                 <td>Navigated to Dashboard</td>
                             </tr>
                         </table>
