Therapies Started. Going home. \m/

--- a/src/main/resources/static/cameras.html
+++ b/src/main/resources/static/cameras.html
@@ -47,7 +47,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.html">Nuclibook &nbsp;&nbsp;&nbsp;&nbsp;|</a>
-            <a class="navbar-brand" href="appointments.html"> Cameras </a>
+            <a class="navbar-brand" href="cameras.html"> Cameras </a>
         </div>
         <!-- Top Menu Items -->
         <ul class="nav navbar-right top-nav">
@@ -187,7 +187,7 @@
                     <a href="cameras.html"><i class="fa fa-fw fa-camera"></i> Cameras</a>
                 </li>
                 <li>
-                    <a href="therapies.html"><i class="fa fa-fw fa-pencil-square-o"></i> Therapies</a>
+                    <a href="Therapies.html"><i class="fa fa-fw fa-pencil-square-o"></i> Therapies</a>
                 </li>
                 <li>
                     <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-cog"></i>
