--- a/src/main/resources/static/_sidebar.html
+++ b/src/main/resources/static/_sidebar.html
@@ -1,37 +1,37 @@
 <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav side-nav">
         <li>
-            <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+            <a href="/index"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
         </li>
         <li>
-            <a href="appointments.html"><i class="fa fa-fw fa-clock-o"></i> Appointments</a>
+            <a href="/appointments"><i class="fa fa-fw fa-clock-o"></i> Appointments</a>
         </li>
         <li>
-            <a href="orders.html"><i class="fa fa-fw fa-truck"></i> Orders</a>
+            <a href="/orders"><i class="fa fa-fw fa-truck"></i> Orders</a>
         </li>
         <li>
-            <a href="patients.html"><i class="fa fa-fw fa-group"></i> Patients</a>
+            <a href="/patients"><i class="fa fa-fw fa-group"></i> Patients</a>
         </li>
         <li>
-            <a href="radiographers.html"><i class="fa fa-fw fa-stethoscope"></i> Radiographers</a>
+            <a href="/radiographers"><i class="fa fa-fw fa-stethoscope"></i> Radiographers</a>
         </li>
         <li>
-            <a href="radiotracers.html"><i class="fa fa-fw fa-flask"></i> Radiotracers</a>
+            <a href="/radiotracers"><i class="fa fa-fw fa-flask"></i> Radiotracers</a>
         </li>
         <li>
-            <a href="cameras.html"><i class="fa fa-fw fa-camera"></i> Cameras</a>
+            <a href="/cameras"><i class="fa fa-fw fa-camera"></i> Cameras</a>
         </li>
         <li>
-            <a href="therapies.html"><i class="fa fa-fw fa-pencil-square-o"></i> Therapies</a>
+            <a href="/therapies"><i class="fa fa-fw fa-pencil-square-o"></i> Therapies</a>
         </li>
         <li>
             <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-cog"></i> Users <i class="fa fa-fw fa-caret-down"></i></a>
             <ul id="demo" class="collapse">
                 <li>
-                    <a href="activity.html"><i class="fa fa-fw fa-list"></i> Activity Log</a>
+                    <a href="/activity"><i class="fa fa-fw fa-list"></i> Activity Log</a>
                 </li>
                 <li>
-                    <a href="settings.html"><i class="fa fa-fw fa-database"></i> Admin Settings</a>
+                    <a href="/settings"><i class="fa fa-fw fa-database"></i> Admin Settings</a>
                 </li>
             </ul>
         </li>
