Many changes, fixing many things

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -19,13 +19,13 @@
 					</div>
 				#[/if]
 				<div class="form-group">
-					<label for="staffid">Enter your ID below and press enter, or scan your ID card.</label>
-					<input type="text" name="staffid" id="staffid" value="#staffid"/>
+					<label for="username">Enter your ID below and press enter, or scan your ID card.</label>
+					<input type="text" name="username" id="username" value="#username"/>
 				</div>
 			#[/if]
 
 			#[if: stage=2]
-				<input type="hidden" name="staffid" value="#staffid"/>
+				<input type="hidden" name="username" value="#username"/>
 				<p>Hello, <strong>#staffname</strong>.</p>
 				<div class="form-group">
 					<label for="password">Please enter your password or PIN and press enter.</label>
