Basic display and modal on staff

--- a/src/main/resources/static/_footer.html
+++ b/src/main/resources/static/_footer.html
@@ -1,3 +1,6 @@
+		<script src="/js/jquery.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
+		<script src="/js/crud-page.js"></script>
 	</body>
 </html>
 <!-- TODO: replace with real design footer -->
