--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -1,6 +1,8 @@
 ##_header.html
 <h1>View All Staff</h1>
 
+<button class="btn btn-green create-button">Create Staff</button>
+
 <table>
 	<thead>
 		<tr>
@@ -17,21 +19,74 @@
 		#[pre]#[/pre]
 
 		#[each]
-			<tr>
-				<td>#id</td>
-				<td>#username</td>
-				<td>#name</td>
-				<td>#role-label</td>
-			</tr>
+		<tr>
+			<td>#id</td>
+			<td>#username</td>
+			<td>#name</td>
+			<td>#role-label</td>
+		</tr>
 		#[/each]
 
 		#[post]#[/post]
 
 		#[empty]
-		<tr><td colspan="3">Empty collection.</td></tr>
+		<tr>
+			<td colspan="3">Empty collection.</td>
+		</tr>
 		#[/empty]
 		#[/collection]
 	</tbody>
 </table>
 
+<div class="modal hide fade edit-modal">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h3 class="edit-mode">Edit Staff Member</h3>
+				<h3 class="create-mode">Create Staff Member</h3>
+			</div>
+			<div class="modal-body">
+				<form class="edit-form">
+					<input type="hidden" name="entity-type" value="staff"/>
+					<input type="hidden" name="entity-id" value="0"/>
+					<div class="form-group">
+						<label for="username">Username</label>
+						<input type="text" name="username" id="username"/>
+					</div>
+					<div class="form-group create-mode">
+						<label for="password">Password</label>
+						<input type="password" name="password" id="password"/>
+					</div>
+					<div class="form-group create-mode">
+						<label for="password_check">Repeat Password</label>
+						<input type="password" name="password_check" id="password_check"/>
+					</div>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-cancel">Cancel</button>
+				<button type="button" class="btn btn-primary btn-save">Ok</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="modal hide fade loading-modal">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h3>Please wait...</h3>
+			</div>
+			<div class="modal-body">
+				<div class="progress">
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+						<span class="sr-only">Loading...</span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<script src="/js/staff.js"></script>
 ##_footer.html
