--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -2,5 +2,7 @@
 <html>
 	<head>
 		<title>#title</title>
+		<link href="/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
