--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -25,7 +25,10 @@
 			<td>#username</td>
 			<td>#name</td>
 			<td>#role-label</td>
-			<td><button class="btn edit-button" data-id="#id">Edit</button> </td>
+			<td>
+				<button class="btn edit-button" data-id="#id">Edit</button>
+				<button class="btn delete-button" data-id="#id">Delete</button>
+			</td>
 		</tr>
 		#[/each]
 
@@ -68,13 +71,37 @@
 						<input type="password" name="password_check" id="password_check"/>
 					</div>
 					<div class="form-group edit-mode">
-						<p class="small"><em>Note: you can only edit your own password, by checking 'Account Settings'.</em></p>
+						<p class="small">
+							<em>Note: you can only edit your own password, by checking 'Account Settings'.</em></p>
 					</div>
 				</form>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-cancel">Cancel</button>
 				<button type="button" class="btn btn-primary btn-save">Ok</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="modal hide fade delete-modal">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h3>Delete Staff Member</h3>
+			</div>
+			<div class="modal-body">
+				<form class="delete-form">
+					<input type="hidden" name="entity-type" value="staff"/>
+					<input type="hidden" name="entity-id" value="0"/>
+					<div class="form-group">
+						<p>Are you sure you want to delete this staff member?</p>
+					</div>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-cancel">Cancel</button>
+				<button type="button" class="btn btn-primary btn-okay">Yes, Delete Them</button>
 			</div>
 		</div>
 	</div>
