--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -107,23 +107,7 @@
 	</div>
 </div>
 
-<div class="modal hide fade loading-modal">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h3>Please wait...</h3>
-			</div>
-			<div class="modal-body">
-				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-						<span class="sr-only">Loading...</span>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
+##_loading-modal.html
 #[collectionmap: objectMap: staff]
 <script src="/js/staff.js"></script>
 ##_footer.html
