--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -84,30 +84,14 @@
 	</div>
 </div>
 
-<div class="modal hide fade delete-modal">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h3>Delete Staff Member</h3>
-			</div>
-			<div class="modal-body">
-				<form class="delete-form">
-					<input type="hidden" name="entity-type" value="staff"/>
-					<input type="hidden" name="entity-id" value="0"/>
-					<div class="form-group">
-						<p>Are you sure you want to delete this staff member?</p>
-					</div>
-				</form>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-cancel">Cancel</button>
-				<button type="button" class="btn btn-primary btn-okay">Yes, Delete Them</button>
-			</div>
-		</div>
-	</div>
-</div>
+#[def: entity-name-title = Staff Member]
+#[def: entity-name-body = staff member]
+#[def: entity-type = staff]
 
+##_delete-modal.html
 ##_loading-modal.html
+
 #[collectionmap: objectMap: staff]
 <script src="/js/staff.js"></script>
+
 ##_footer.html
