Added role TODO

--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -74,6 +74,7 @@
 						<p class="small">
 							<em>Note: you can only edit your own password, by checking 'Account Settings'.</em></p>
 					</div>
+					<!-- TODO: staff role drop-down -->
 				</form>
 			</div>
 			<div class="modal-footer">
