Made including crud-page.js optional

--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -93,6 +93,7 @@
 ##_loading-modal.html
 
 #[collectionmap: objectMap: staff]
+#[def: crud = yes]
 <script src="/js/staff.js"></script>
 
 ##_footer.html
