--- a/src/main/resources/static/_footer.html
+++ b/src/main/resources/static/_footer.html
@@ -1,6 +1,6 @@
 		<script src="/js/jquery.js"></script>
 		<script src="/js/bootstrap.min.js"></script>
-		<script src="/js/crud-page.js"></script>
+		#[if: crud]<script src="/js/crud-page.js"></script>#[/if]
 	</body>
 </html>
 <!-- TODO: replace with real design footer -->
