Added delete keyword

--- a/src/main/resources/static/_delete-modal.html
+++ b/src/main/resources/static/_delete-modal.html
@@ -2,7 +2,7 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h3>#entity-name-title</h3>
+				<h3>Delete #entity-name-title</h3>
 			</div>
 			<div class="modal-body">
 				<form class="delete-form">
