--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -1,7 +1,8 @@
+#[def: title = Staff Management]
 ##_header.html
 <h1>View All Staff</h1>
 
-<button class="btn btn-green create-button">Create Staff</button>
+<button class="btn create-button">Create Staff</button>
 
 <table>
 	<thead>
