--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -4,5 +4,6 @@
 		<title>#title</title>
 		<link href="/css/bootstrap.min.css" rel="stylesheet">
 		<link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+		<link href="/js/plugins/bootstrap-toastr/toastr.min.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
