Added enabled/disabled check to login

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -15,7 +15,7 @@
 				#[/if]
 				#[if: error-bad-status]
 					<div class="note note-danger">
-						<p><strong>Error:</strong> your account is not currently enabled.</p>
+						<p><strong>Error:</strong> your account is currently disabled.</p>
 					</div>
 				#[/if]
 				<div class="form-group">
